@@ -1,39 +1,25 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
-    id "com.exactpro.th2.gradle.base" version "0.0.8"
-    id "com.exactpro.th2.gradle.publish" version "0.0.8"
-    id "org.jetbrains.kotlin.jvm" version "$kotlin_version"
-    id 'org.jetbrains.kotlin.kapt' version "$kotlin_version"
+    alias(libs.plugins.th2.publish)
+    alias(libs.plugins.kotlin.jvm)
+    alias(libs.plugins.kotlin.kapt)
+    alias(libs.plugins.protobuf)
+    alias(libs.plugins.jmh)
     id "java-library"
     id "java-test-fixtures"
     id "maven-publish"
-    id "com.google.protobuf" version "0.9.4"
-    id "me.champeau.jmh" version "0.7.2"
 }
 
 group = 'com.exactpro.th2'
 version = release_version
 
 ext {
-    grpcVersion = '1.62.2'
-    protobufVersion = '3.25.3'
-    serviceGeneratorVersion = '3.6.1'
-
-    cradleVersion = '5.3.0-dev'
-    junitVersion = '5.10.2'
-
-    jmhVersion = '1.37'
-    autoValueVersion = '1.10.4'
-    genBaseDir = file("${buildDir}/generated/source/proto")
+    genBaseDir = project.layout.buildDirectory.file("generated/source/proto").get().asFile
 }
 
 repositories {
     mavenCentral()
-    maven {
-        name 'Sonatype_snapshots'
-        url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
-    }
     maven {
         name 'Sonatype_releases'
         url 'https://s01.oss.sonatype.org/content/repositories/releases/'
@@ -46,17 +32,12 @@ repositories {
     }
 }
 
-java {
-    withJavadocJar()
-    withSourcesJar()
-}
-
-kotlin {
-    jvmToolchain(11)
-}
-
 tasks.withType(KotlinCompile).configureEach {
     kotlinOptions.freeCompilerArgs += "-Xjvm-default=all"
+    compilerOptions {
+        // The next instruction should be deleted after migration to kotlin 1.9.+
+        kotlinDaemonJvmArguments.addAll("--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
+    }
 }
 
 test {
@@ -73,30 +54,28 @@ tasks.register('integrationTest', Test) {
 }
 
 dependencies {
-    api('com.exactpro.th2:grpc-common:4.5.0-dev') {
+    api(libs.th2.grpc.common) {
         because('protobuf transport is main now, this dependency should be moved to grpc, mq protobuf modules after splitting')
     }
-    api("com.exactpro.th2:cradle-core:$cradleVersion") {
+    api(libs.th2.cradle.core) {
         because('cradle is included into common library now, this dependency should be moved to a cradle module after splitting')
     }
     api('io.netty:netty-buffer') {
         because('th2 transport protocol is included into common library now, this dependency should be moved to a th2 transport module after splitting')
     }
 
-    jmh "org.openjdk.jmh:jmh-core:$jmhVersion"
-    jmh "org.openjdk.jmh:jmh-generator-annprocess:$jmhVersion"
+    jmh libs.jmh.core
+    jmh libs.jmh.generator.annprocess
 
     implementation 'com.google.protobuf:protobuf-java-util'
-    implementation "com.exactpro.th2:grpc-service-generator:$serviceGeneratorVersion"
-    implementation "com.exactpro.th2:cradle-cassandra:$cradleVersion"
+    implementation libs.th2.grpc.service.generator
+    implementation libs.th2.cradle.cassandra
 
-    implementation "com.google.auto.value:auto-value-annotations:$autoValueVersion"
-    kapt("com.google.auto.value:auto-value:$autoValueVersion") {
-        //FIXME: Updated library because it is fat jar
-        // auto-value-1.10.1.jar/META-INF/maven/com.google.guava/guava/pom.xml (pkg:maven/com.google.guava/guava@31.1-jre, cpe:2.3:a:google:guava:31.1:*:*:*:*:*:*:*) : CVE-2023-2976, CVE-2020-8908
-    }
+    implementation libs.auto.value.annotations
+    kapt(libs.auto.value)
+    kapt(libs.kotlinx.metadata)
     //this is required to add generated bridge classes for kotlin default constructors
-    implementation(files("$buildDir/tmp/kapt3/classes/main"))
+    implementation(files(project.layout.buildDirectory.file("tmp/kapt3/classes/main").get().asFile))
 
     //FIXME: Add these dependencies as api to grpc-... artifacts
     implementation "io.grpc:grpc-protobuf"
@@ -128,7 +107,7 @@ dependencies {
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin"
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor'
 
-    implementation "com.fasterxml.uuid:java-uuid-generator:5.0.0"
+    implementation(libs.java.uuid.generator)
 
     implementation 'org.apache.logging.log4j:log4j-slf4j2-impl'
     implementation 'org.apache.logging.log4j:log4j-core'
@@ -138,39 +117,25 @@ dependencies {
     implementation 'io.prometheus:simpleclient_httpserver'
     implementation 'io.prometheus:simpleclient_log4j2'
 
-    implementation("com.squareup.okio:okio:3.4.0") {
-        because('fix vulnerability in transitive dependency <com.squareup.okhttp3:okhttp>' +
-                'Note: kotlin:1.9 is transitive dependency since 3.5.0')
-    }
-    implementation("com.squareup.okhttp3:okhttp:4.11.0") {
-        because('fix vulnerability in transitive dependency <kubernetes-client>. ' +
-                'Note: kotlin:1.9 is transitive dependency since 4.12.0')
-    }
-    implementation('com.squareup.okhttp3:logging-interceptor:4.11.0') {
-        because('fix vulnerability in transitive dependency <kubernetes-client>. ' +
-                'Note: kotlin:1.9 is transitive dependency since 4.12.0')
-    }
-
-    implementation("io.fabric8:kubernetes-client:6.12.1") {
+    implementation(libs.kubernetes.client) {
         exclude group: 'com.fasterxml.jackson.dataformat', module: 'jackson-dataformat-yaml'
     }
 
-    implementation "io.github.microutils:kotlin-logging:3.0.5"
+    implementation libs.kotlin.logging
 
     testImplementation 'org.hamcrest:hamcrest:2.2'
-    testImplementation 'javax.annotation:javax.annotation-api:1.3.2'
-    testImplementation "org.junit.jupiter:junit-jupiter:$junitVersion"
-    testImplementation "org.mockito.kotlin:mockito-kotlin:5.2.1"
+    testImplementation libs.junit.jupiter
+    testImplementation libs.mockito.kotlin
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit5'
-    testImplementation "org.testcontainers:testcontainers:1.19.6"
-    testImplementation "org.testcontainers:rabbitmq:1.19.6"
-    testImplementation("org.junit-pioneer:junit-pioneer:2.2.0") {
+    testImplementation libs.testcontainers
+    testImplementation libs.testcontainers.rabbitmq
+    testImplementation(libs.junit.pioneer) {
         because("system property tests")
     }
-    testImplementation("org.awaitility:awaitility:4.2.1")
+    testImplementation libs.awaitility
 
-    testFixturesImplementation "org.jetbrains.kotlin:kotlin-test-junit5:$kotlin_version"
-    testFixturesImplementation "org.junit.jupiter:junit-jupiter:$junitVersion"
+    testFixturesImplementation libs.kotlin.test.junit5
+    testFixturesImplementation libs.junit.jupiter
 }
 
 sourceSets {
@@ -180,14 +145,14 @@ sourceSets {
 
 protobuf {
     protoc {
-        artifact = "com.google.protobuf:protoc:$protobufVersion"
+        artifact = "${libs.protobuf.protoc.get()}"
     }
     plugins {
         grpc {
-            artifact = "io.grpc:protoc-gen-grpc-java:$grpcVersion"
+            artifact = "${libs.protoc.gen.grpc.java.get()}"
         }
         services {
-            artifact = "com.exactpro.th2:grpc-service-generator:$serviceGeneratorVersion:all@jar"
+            artifact = "${libs.th2.grpc.service.generator.get()}:all@jar"
         }
     }
     generateProtoTasks {
@@ -203,9 +168,10 @@ protobuf {
     }
 }
 
-tasks.named('generateProto') {enabled = false }
-tasks.named('extractIncludeProto') {enabled = false }
-tasks.named('extractIncludeTestFixturesProto') {enabled = false }
+tasks.named('generateProto') { enabled = false }
+tasks.named('extractIncludeProto') { enabled = false }
+tasks.named('extractIncludeTestProto') { enabled = false }
+tasks.named('extractIncludeTestFixturesProto') { enabled = false }
 
 compileTestJava.dependsOn.add('generateTestProto')
 processTestResources.dependsOn.add('generateTestProto')
